added admin page and some reactivity

--- a/client/src/components/MainPage/MainPage.scss
+++ b/client/src/components/MainPage/MainPage.scss
@@ -1,14 +1,14 @@
-.comic-cards {
-	list-style: none;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 32px;
-	padding: 0;
-	margin: 0;
-	&__card {
-		border: 1px solid;
-		border-radius: 12px;
-		width: 200px;
-		padding: 4px;
-	}
-}
+// .comic-cards {
+// 	list-style: none;
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	gap: 32px;
+// 	padding: 0;
+// 	margin: 0;
+// 	&__card {
+// 		border: 1px solid;
+// 		border-radius: 12px;
+// 		width: 200px;
+// 		padding: 4px;
+// 	}
+// }
